--- a/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
@@ -6,12 +6,12 @@
             <div>
                 <jhi-alert-error></jhi-alert-error>
                 <h4 class="form-section"><i class="ft-users"></i>Información</h4>
-                <div class="form-group" [hidden]="!focusGroup.id">
+                <div class="form-group" [hidden]="true">
                     <label for="id">ID</label>
                     <input type="text" class="form-control" id="id" name="id"
-                           [(ngModel)]="focusGroup.id" readonly />
+                           [(ngModel)]="focusGroup.id" readonly/>
                 </div>
-                <div class="form-group">
+                <div class="form-group" >
                     <label class="form-control-label" for="field_name">Nombre</label>
                     <input type="text" class="form-control" name="name" id="field_name"
                            [(ngModel)]="focusGroup.name" required/>
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_description">Description</label>
+                    <label class="form-control-label" for="field_description">Descripción</label>
                     <input type="text" class="form-control" name="description" id="field_description"
                            [(ngModel)]="focusGroup.description" required/>
                     <div [hidden]="!(editForm.controls.description?.dirty && editForm.controls.description?.invalid)">
@@ -38,10 +38,12 @@
                     <div class="form-group col-lg-6 col-md-6 col-sm-12">
                         <label class="form-control-label" for="field_beginDate">Fecha de inicio estimada</label>
                         <div class="input-group">
-                            <input id="field_beginDate" type="text" class="form-control" name="beginDate" ngbDatepicker  #beginDateDp="ngbDatepicker" [(ngModel)]="focusGroup.beginDate"
+                            <input id="field_beginDate" type="text" class="form-control" name="beginDate" ngbDatepicker
+                                   #beginDateDp="ngbDatepicker" [(ngModel)]="focusGroup.beginDate"
                                    required/>
                             <span class="input-group-append">
-                            <button type="button" class="btn btn-secondary" (click)="beginDateDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
+                            <button type="button" class="btn btn-secondary" (click)="beginDateDp.toggle()"><fa-icon
+                                [icon]="'calendar-alt'"></fa-icon></button>
                         </span>
                         </div>
                         <div [hidden]="!(editForm.controls.beginDate?.dirty && editForm.controls.beginDate?.invalid)">
@@ -54,10 +56,12 @@
                     <div class="form-group col-lg-6 col-md-6 col-sm-12">
                         <label class="form-control-label" for="field_endDate">Fecha de finalización estimada</label>
                         <div class="input-group">
-                            <input id="field_endDate" type="text" class="form-control" name="endDate" ngbDatepicker  #endDateDp="ngbDatepicker" [(ngModel)]="focusGroup.endDate"
+                            <input id="field_endDate" type="text" class="form-control" name="endDate" ngbDatepicker
+                                   #endDateDp="ngbDatepicker" [(ngModel)]="focusGroup.endDate"
                                    required/>
                             <span class="input-group-append">
-                            <button type="button" class="btn btn-secondary" (click)="endDateDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
+                            <button type="button" class="btn btn-secondary" (click)="endDateDp.toggle()"><fa-icon
+                                [icon]="'calendar-alt'"></fa-icon></button>
                         </span>
                         </div>
                         <div [hidden]="!(editForm.controls.endDate?.dirty && editForm.controls.endDate?.invalid)">
@@ -69,41 +73,51 @@
                     </div>
                 </div>
 
-                <div class="form-group" [hidden]="!focusGroup.code">
+                <div class="form-group" [hidden]="true">
                     <label class="form-control-label" for="field_code">Code</label>
                     <input type="text" class="form-control" name="code" id="field_code"
                            [(ngModel)]="focusGroup.code"/>
                 </div>
 
-                <div class="form-group" [hidden]="!focusGroup.incentive">
+                <div class="form-group" [hidden]="true">
                     <label class="form-control-label" for="field_incentive">Incentive</label>
-                    <select class="form-control" id="field_incentive" name="incentive" [(ngModel)]="focusGroup.incentive" >
+                    <select class="form-control" id="field_incentive" name="incentive"
+                            [(ngModel)]="focusGroup.incentive">
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="incentiveOption.id === focusGroup.incentive?.id ? focusGroup.incentive : incentiveOption" *ngFor="let incentiveOption of incentives; trackBy: trackIncentiveById">{{incentiveOption.id}}</option>
+                        <option
+                            [ngValue]="incentiveOption.id === focusGroup.incentive?.id ? focusGroup.incentive : incentiveOption"
+                            *ngFor="let incentiveOption of incentives; trackBy: trackIncentiveById">{{incentiveOption.id}}</option>
                     </select>
                 </div>
-                <div class="form-group" [hidden]="!focusGroup.institution">
+                <div class="form-group" [hidden]="true">
                     <label class="form-control-label" for="field_institution">Institution</label>
-                    <select class="form-control" id="field_institution" name="institution" [(ngModel)]="focusGroup.institution" >
+                    <select class="form-control" id="field_institution" name="institution"
+                            [(ngModel)]="focusGroup.institution">
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="institutionOption.id === focusGroup.institution?.id ? focusGroup.institution : institutionOption" *ngFor="let institutionOption of institutions; trackBy: trackInstitutionById">{{institutionOption.id}}</option>
+                        <option
+                            [ngValue]="institutionOption.id === focusGroup.institution?.id ? focusGroup.institution : institutionOption"
+                            *ngFor="let institutionOption of institutions; trackBy: trackInstitutionById">{{institutionOption.id}}</option>
                     </select>
                 </div>
-                <div class="form-group" [hidden]="!focusGroup.categories">
+                <div class="form-group" [hidden]="true">
                     <label for="field_category">Category</label>
-                    <select class="form-control" id="field_category" multiple name="category" [(ngModel)]="focusGroup.categories">
-                        <option [ngValue]="getSelected(focusGroup.categories, categoryOption)" *ngFor="let categoryOption of categories; trackBy: trackCategoryById">{{categoryOption.id}}</option>
+                    <select class="form-control" id="field_category" multiple name="category"
+                            [(ngModel)]="focusGroup.categories">
+                        <option [ngValue]="getSelected(focusGroup.categories, categoryOption)"
+                                *ngFor="let categoryOption of categories; trackBy: trackCategoryById">{{categoryOption.id}}</option>
                     </select>
                 </div>
-                <div class="form-group" [hidden]="!focusGroup.participants">
+                <div class="form-group" [hidden]="true">
                     <label for="field_participant">Participant</label>
-                    <select class="form-control" id="field_participant" multiple name="participant" [(ngModel)]="focusGroup.participants">
-                        <option [ngValue]="getSelected(focusGroup.participants, participantOption)" *ngFor="let participantOption of participants; trackBy: trackParticipantById">{{participantOption.id}}</option>
+                    <select class="form-control" id="field_participant" multiple name="participant"
+                            [(ngModel)]="focusGroup.participants">
+                        <option [ngValue]="getSelected(focusGroup.participants, participantOption)"
+                                *ngFor="let participantOption of participants; trackBy: trackParticipantById">{{participantOption.id}}</option>
                     </select>
                 </div>
             </div>
             <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
+                <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
                     <i class="ft-x"></i>&nbsp;<span>Cancel</span>
                 </button>
                 <button type="submit" id="save-entity" class="btn btn-primary">
