--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -1256,8 +1256,8 @@ pre code {
 
 .container-fluid {
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 3%;
+    padding-left: 3%;
     margin-right: auto;
     margin-left: auto;
 }
